UI pattern overflow problem fixed

--- a/patternlibrarycopy/css/master.css
+++ b/patternlibrarycopy/css/master.css
@@ -210,6 +210,7 @@ nav .searchcart a:focus{
 
   grid-template-columns: repeat(8, 1fr);
 
+  width: 100%;
 }
 
 .main-content {
@@ -933,7 +934,9 @@ footer p {
     display: none;
   }
 
-
+  #colour-palette .colourchips{
+    grid-template-columns: repeat(1, 1fr);
+  }
 
   .subnav {
     list-style-type: none;
@@ -952,8 +955,6 @@ footer p {
     display: grid;
 
     grid-template-columns: repeat(8, 1fr);
-
-
   }
 
   p {
